Pending changes exported from your codespace

--- a/Templates/cmake/CMakeLists.txt
+++ b/Templates/cmake/CMakeLists.txt
@@ -1,5 +1,6 @@
 #==============================================================
-# Copyright © Intel Corporation
+# Copyright 
+ Intel Corporation
 #
 # SPDX-License-Identifier: MIT
 #=============================================================
